<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailRecipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_photo_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@android:color/darker_gray"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/nama_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textSize="28sp"
            android:text="@string/food_name"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:text="@string/detail"/>

        <TextView
            style="@style/TextContent"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bahan"/>

        <TextView
            style="@style/TextSpecField"
            android:id="@+id/bahan_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/detail_bahan"/>

        <TextView
            style="@style/TextContent"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"/>

        <TextView
            style="@style/TextSpecField"
            android:id="@+id/cara_buat"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_tutorial"/>

    </LinearLayout>

</ScrollView>